--- a/literature.bib
+++ b/literature.bib
@@ -32,3 +32,12 @@
      year     = "2007",
      month    = "Juli"
  }
+ 
+ @misc{hsla:modulBMT,
+     author = "{Hochschule Landshut}",
+     publisher = "Hochschule Landshut",
+     title = "Modulhandbuch BA BMT",
+     month = "November",
+     year = "2013",
+     url = "https://www.haw-landshut.de/fileadmin/hs_landshut_english/electrical_engineering/download/pdf/Modulhandb%C3%BCcher/Modulhandbuch_BA_BMT_WS_13_14_SS_13_beschlossen_FR_2013_11_26.pdf",
+ } 
