--- a/header.tex
+++ b/header.tex
@@ -6,6 +6,7 @@
 \usepackage{anysize} %Damit man Raender leicht einstellen kann
 \usepackage{titlesec}
 
+\usepackage{floatrow}
 %\usepackage[sc,center]{titlesec} %Um Kapitelnamen-Schrift zu veraendern
 %\usepackage[T1]{fontenc} %ueblich
 
