--- a/literature.bib
+++ b/literature.bib
@@ -39,5 +39,5 @@
      title = "Modulhandbuch BA BMT",
      month = "November",
      year = "2013",
-     url = "https://www.haw-landshut.de/fileadmin/hs_landshut_english/electrical_engineering/download/pdf/Modulhandb%C3%BCcher/Modulhandbuch_BA_BMT_WS_13_14_SS_13_beschlossen_FR_2013_11_26.pdf",
+     url = "{https://www.haw-landshut.de/fileadmin/hs_landshut_english/electrical_engineering/download/pdf/Modulhandb%FCcher/Modulhandbuch_BA_BMT_WS_13_14_SS_13_beschlossen_FR_2013_11_26.pdf}"
  } 
