--- a/header.tex
+++ b/header.tex
@@ -13,6 +13,8 @@
 %Paket zum importieren von Bildern
 \usepackage{graphicx}
 \newcommand{\HRule}{\rule{\linewidth}{0.2mm}}
+\usepackage{tikz}
+\usetikzlibrary{trees}
 
 \usepackage{pageslts}
 \usepackage{thumbs}
