--- a/literature.bib
+++ b/literature.bib
@@ -1,5 +1,5 @@
 @INBOOK{hensen:gesundeGesellschaft,
- 	author = "P. Hensen, Christian Kölzer",
+ 	author = "P. Hensen and Christian Kölzer",
  	title = "Die gesunde Gesellschaft",
  	chapter = "Die gesunde Gesellschaft und ihre Ökonomie – vom Gesundheitswesen zur Gesundheitswirtschaft",
  	publisher = "VS Verlag für Sozialwissenschaften",
@@ -15,7 +15,7 @@
  }
  
 @INBOOK{ nefiodow:gesundheit,
-	author = "P. Granig, L. A. Nefiodow",
+	author = "P. Granig and L. A. Nefiodow",
   	title = "Gesundheitswirtschaft – Wachstumsmotor im 21. Jahrhundert",
   	chapter = "Der sechste Kontratieff",
   	publisher = "Gabler Verlag",
@@ -40,4 +40,28 @@
      month = "November",
      year = "2013",
      url = "{https://www.haw-landshut.de/fileadmin/hs_landshut_english/electrical_engineering/download/pdf/Modulhandb%FCcher/Modulhandbuch_BA_BMT_WS_13_14_SS_13_beschlossen_FR_2013_11_26.pdf}"
- } 
+ }
+ 
+  @misc{dicom:iod,
+      author = "{National Electrical Manufacturers Association}",
+      publisher = "{National Electrical Manufacturers Association}",
+      title = "Digital Imaging and Communications in Medicine (DICOM) - Part 3: Information Object Definitions",
+      year = "2011",
+      url = "{ftp://medical.nema.org/medical/dicom/2011/11_03pu.pdf}"
+  }
+ 
+  @misc{dicom:dd,
+       author = "{National Electrical Manufacturers Association}",
+       publisher = "{National Electrical Manufacturers Association}",
+       title = "Digital Imaging and Communications in Medicine (DICOM) - Part 6: Data Dictionary",
+       year = "2011",
+       url = "{ftp://medical.nema.org/medical/dicom/2011/11_06pu.pdf}"
+   }
+ 
+ @BOOK{pianykh:dicom,
+   AUTHOR       = "Pianykh, Oleg S.",
+   TITLE        = "{D}igital {I}maging and {C}ommunications in {M}edicine {(DICOM)}",
+   PUBLISHER    = "Springer-Verlag Berlin Heidelberg",
+   YEAR         = "2008",
+ }
+ 
